updated alt text

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,21 +30,21 @@
 
     <section class="services">
         <article id = "search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="a sketchpad with the letters S E O drawn on it, and several pencils next to a full cup of coffee on a table" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="a sketchpad with the letters S E O drawn on it, Horiseon is working hard on your website" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="a laptop displaying a graph of an inceasing function of reputation vs. time" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="a laptop displaying a graph of inceasing reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="a conference table busily littered with symbols, meant to represent the cacophony of social media" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="a conference table with many scattered social media symbols" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
